# product-predict

./: .env.example  .gitignore  API_DOC.md  README.md  chart_translate_schema.json  main.py  preserve_style_translate.py  product-predict.service  pyproject.toml  test_cdn_translate.py  test_online_translate.py
app/: config.py  database.py  logging_config.py  worker.py
app/api/: translate.py
app/models/: task.py  translate.py
app/services/: aliyun_translate_service.py  online_translate_service.py  task_service.py  translate_service.py
app/utils/: image_utils.py
docs/: API.md
