[project]
name = "product-translate"
version = "0.1.0"
description = "FastAPI service for image text translation (Chinese to English)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "pillow>=10.0.0",
    "rapidocr-onnxruntime>=1.3.0",
    "google-genai>=1.0.0",
    "simple-lama-inpainting>=0.1.0",
    "httpx>=0.28.0",
    "alibabacloud-alimt20181012>=1.5.2",
    "sqlalchemy>=2.0.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "greenlet>=3.0.0",
]

[project.scripts]
serve = "main:run"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
